--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,11 @@
         </activity>
 
         <activity android:name=".AccountActivity">
-
         </activity>
+
+        <activity android:name=".Book_Info_Activity">
+        </activity>
+
     </application>
 
 </manifest>
